deployment-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: app
  name: app
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: app
  template:
    metadata:
      labels:
        deployment: app
    spec:
      containers:
      - env:
        - name: DB_HOST
          value: database
        - name: DB_PORT
          value: "3306"
        image: quay.io/aletia/php-sql-sample:latest
        imagePullPolicy: IfNotPresent
        name: app
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 8443
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
