route-app.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: app
  name: app
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: app
    weight: 100
  wildcardPolicy: None
